Add new Search page to other pages on site. Remove Search JS from the Map JS

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -57,6 +57,10 @@
                     <a class="dropdown-item" href="lincoln-highway-map.html#Philadelphia">Philadelphia</a>
                   </div>
                 </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="search.html">Search</a>
+                </li>
             
               </ul>
             </div>    
@@ -69,8 +73,10 @@
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      Learn more about COVID-19 restrictions in Pennsylvania 
-      <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Travelers.aspx" target="_blank" class="alert-link" rel="noopener">here</a>.
+      Learn more about 
+      <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Travelers.aspx" 
+      target="_blank" class="alert-link" rel="noopener">COVID-19 restrictions</a>
+      in Pennsylvania. 
     </div>
 
     <!--Banner-->
@@ -89,15 +95,8 @@
         <!--Map-->
 
         <div class="col-xl-8 col-md-12" id="map-jump">
-
-          <!--Map Search-->
-
           <div id="map">
           </div>
-          <div class="map-search-pos">
-            <h3>Search for places to stop along the route!</h3>
-            <input id="map-search" class="controls" type="text" placeholder="Press Enter to search">
-          </div>  
         </div>
 
         <!--Map cards-->
