--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Lincoln Highway Road Trip</title>
+
+    <!--Favicon-->
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
 
 </head>
@@ -55,6 +57,11 @@
                     <a class="dropdown-item" href="lincoln-highway-map.html#Philadelphia">Philadelphia</a>
                   </div>
                 </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="search.html">Search</a>
+                </li>
+
               </ul>
             </div>    
           </nav>
@@ -66,8 +73,10 @@
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      Learn more about COVID-19 restrictions in Pennsylvania 
-      <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Travelers.aspx" target="_blank" class="alert-link" rel="noopener">here</a>.
+      Learn more about 
+      <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Travelers.aspx" 
+      target="_blank" class="alert-link" rel="noopener">COVID-19 restrictions</a>
+      in Pennsylvania. 
     </div>
 
     <!--Banner-->
@@ -281,7 +290,7 @@
 
   <!--Google reCAPTCHA-->
 
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script defer src="https://www.google.com/recaptcha/api.js"></script>
     
 </body>
 </html>
