Start adding content to the location sections on the map page

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -179,26 +179,46 @@
         </div>
 
         <div class="col-xl-8 post">
-            <strong>Where to eat:</strong> 
+            <p><strong>Where to eat:</strong></p> 
             <br>
-          <p>
-            Sit amet, consectetur adipiscing elit. 
-            Nunc vitae rhoncus neque, a mattis nulla. 
-            Mauris vel mi cursus purus maximus fermentum. 
-            Praesent pulvinar finibus mauris quis suscipit. 
-            Fusce volutpat vehicula augue, a finibus orci cursus pretium. 
-            Aliquam interdum magna aliquet urna interdum porta. 
-            Aliquam volutpat erat id elit fringilla ullamcorper. 
-          </p>  
-            <span class="more-text"> <p>Sit amet, consectetur adipiscing elit. 
-              Nunc vitae rhoncus neque, a mattis nulla. 
-              Mauris vel mi cursus purus maximus fermentum. 
-              Praesent pulvinar finibus mauris quis suscipit. 
-              Fusce volutpat vehicula augue, a finibus orci cursus pretium. 
-              Aliquam interdum magna aliquet urna interdum porta. 
-              Aliquam volutpat erat id elit fringilla ullamcorper.</p></span>
+            <p>
+              <ul>
+                <li>Try Pittsburgh’s signature sandwich, with fries on it of course, at <a href="https://primantibros.com/" target="_blank" rel="noopener">
+                    Primanti Bros</a>.
+                </li>
+                <br>
+                <li>
+                  <a href="https://www.eatgaucho.com/" target="_blank" rel="noopener">Gaucho Parrilla Argentina</a>
+                  regularly ranks as a local favourite steakhouse.
+                </li>
+                <br>
+                <li>
+                  For more local flavour and brews, check out <a href="https://churchbrew.com/" target="_blank" rel="noopener">The Church Brew Works</a>.
+                </li>  
+              </ul>    
+            </p>
+            <br>  
+            <span class="more-text"> 
+              <p><strong>Where to stay</strong></p>
+              <br>
+              <p>
+                <ul>
+                  <li>
+                    <a href="https://www.tryppittsburgh.com/" target="_blank" rel="noopener">The Tryp</a> in Lawrenceville is right in the middle of one of the hippest areas of the city.
+                  </li>
+                  <br>
+                  <li>
+                    Stay right in downtown Pittsburgh at the <a href="https://distrikthotelpittsburgh.com/" target="_blank" rel="noopener">Distrikt Hotel.</a>
+                  </li>
+                  <br>
+                  <li>
+                    <a href="https://www.marriott.com/hotels/travel/pitss-springhill-suites-pittsburgh-southside-works/" target="_blank" rel="noopener">SpringHill Sweets</a> is located right in the night life centred on the South Side.
+                  </li>
+                </ul>
+              </p>
+            </span>
             
-          <br>
+            <br>
           <button class="read-more-btn">Read More</button>
           
 
