--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -107,15 +107,18 @@
               Pittsburgh
             </strong>
           </h2>
-          <p>Start your trip in Pittsburgh, the second largest city in Pennsylvania. 
+          <p>
+            Start your trip in Pittsburgh, the second largest city in Pennsylvania. 
             This city is located in the far southwestern part of the state, on the Allegheny plateau. 
             Many of its distinctive neighborhoods are built right into the these mountainous foothills. 
             Other parts of Pittsburgh are shaped around its iconic three rivers: the Ohio, Monongahela, and Allegheny. 
             Pittsburgh was once one of the most industrialised cities in the world, but in the post-industrial era it has 
             focused on becoming a hub of higher education. 
+          </p>
+          <br>
+          <p>
             With the Andy Warhol and Carnegie museums located in the city, Pittsburgh is also considered an artistic 
-            stronghold in Pennsylvania. 
-            It’s regularly listed as the most livable city in the US.  
+            stronghold in Pennsylvania. It’s regularly listed as the most livable city in the US.  
           </p>
           <br>
           <a href="#Pittsburgh" class="more-info-btn">More info</a>
