Update bedford.jpg file name to remove capitalisation

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -291,7 +291,7 @@
           <h3><strong>Things to do around Bedford</strong></h3>
         </div>
           <div class="col-xl-4 into-bttm-pdding">
-            <img src="assets/images/Bedford.jpg" class="map-pg-img" alt="Image of Bedford town in autumn">
+            <img src="assets/images/bedford.jpg" class="map-pg-img" alt="Image of Bedford town in autumn">
             <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
             <p class="back-map1">Back to map</p>
           </div>
