--- a/search.html
+++ b/search.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!--Style packs and CSS-->
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@400;500&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap"
@@ -20,6 +22,9 @@
 
   <!--Favicon-->
   <link rel="shortcut icon" href="assets/images/favicon.ico" />
+
+  <meta name="description" content="Search for additional places to stop along this road trip across Pennsylvania on the Lincoln Highway. We've suggested
+  places to stop, but this search page will give you more freedom to find places that suit your tastes.">
 
 </head>
 
