Add better quality image for Fulton Steamboat inn to the homepage

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
       <div class="mySlides fade-style">
-        <img class="image-size" src="assets/images/steamboat-inn.jpeg" alt="Image of Fulton Steamboat Inn">
+        <img class="image-size" src="assets/images/fulton-inn.jpeg" alt="Image of Fulton Steamboat Inn">
       </div>
 
       <div class="mySlides fade-style">
@@ -178,7 +178,7 @@
 
         <!--Footer Contact Info-->
         <div class="col-xl-4 col-md-6 col-6 footer-pos contact-pos">
-          <a class="contact-btn" id="form-btn">Contact Us</a>
+          <a class="contact-btn" id="form-btn" aria-label="Open contact form">Contact Us</a>
         </div>
 
         <!--Hidden Contact Form-->
