Final commit for this version of the project

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
   <!--Slideshow-->
 
+    <!--Instructions for building this slideshow come from the W3 Schools article cited in my ReadMe-->
+
   <section class="slideshow-top">
 
     <div class="slideshow-container">
