--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -150,7 +150,7 @@
     <!--Pop-out Button-->
 
     <div class="col-12 mobile-news-btn newsletter-button">
-      <a class="news-btn-styles" id="newsletterButton">
+      <a class="news-btn-styles" id="newsletterButton" aria-label="Open newsletter form">
         Get our Newsletter!
       </a>
     </div>
@@ -193,7 +193,7 @@
       <div class="col-xl-4 into-bttm-pdding">
         <img src="assets/images/pittsburgh2.jpg" class="map-pg-img" alt="Image of Pittsburgh skyline">
         <div>
-          <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+          <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
           <p class="back-map1">Back to map</p>
         </div>
       </div>
@@ -219,7 +219,7 @@
         </ul>
 
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
 
           <ul class="location-font">
@@ -239,7 +239,7 @@
             </li>
           </ul>
 
-        </span>
+        </div>
         <br>
         <button class="read-more-btn">Read More</button>
 
@@ -274,7 +274,7 @@
         </ul>
 
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
 
           <ul class="location-font">
@@ -295,7 +295,7 @@
             </li>
           </ul>
 
-        </span>
+        </div>
 
         <br>
         <button class="read-more-btn">Read More</button>
@@ -305,7 +305,7 @@
       <div class="col-xl-4 into-bttm-pdding">
         <h3 class="left-title"><strong>Things to do around Fallingwater</strong></h3>
         <img src="assets/images/fallingwater2.jpg" class="map-pg-img" alt="Image of Fallingwater house in autumn">
-        <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+        <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
         <p class="back-map1">Back to map</p>
       </div>
     </div>
@@ -321,8 +321,8 @@
       </div>
       <div class="col-xl-4 into-bttm-pdding">
         <img src="assets/images/bedford.jpg" class="map-pg-img" alt="Image of Bedford town in autumn">
-        <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
-        <p class="back-map1">Back to map</p>
+        <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+        <p class="back-map1" aria-label="Back to top">Back to map</p>
       </div>
       <div class="col-xl-8">
 
@@ -346,7 +346,7 @@
         </ul>
 
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
 
           <ul class="location-font">
@@ -369,7 +369,7 @@
             </li>
           </ul>
 
-        </span>
+        </div>
 
         <br>
         <button class="read-more-btn">Read More</button>
@@ -404,7 +404,7 @@
           </li>
         </ul>
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
           <ul class="location-font">
             <li>
@@ -420,7 +420,7 @@
                 target="_blank" rel="noopener">Craft Beer and Spirits Tour</a>.
             </li>
           </ul>
-        </span>
+        </div>
 
         <br>
         <button class="read-more-btn">Read More</button>
@@ -429,7 +429,7 @@
       <div class="col-xl-4 into-bttm-pdding">
         <h3 class="left-title"><strong>Things to do in Gettysburg</strong></h3>
         <img src="assets/images/gettysburg2.jpg" class="map-pg-img" alt="Image of a monument at Gettysburg battlefield">
-        <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+        <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
         <p class="back-map1">Back to map</p>
       </div>
     </div>
@@ -445,7 +445,7 @@
       <div class="col-xl-4 into-bttm-pdding">
         <img src="assets/images/harrisburg-bridge.jpg" class="map-pg-img"
           alt="Image of Harrisburg bridge and Pride of the Susquehanna boat">
-        <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+        <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
         <p class="back-map1">Back to map</p>
       </div>
       <div class="col-xl-8">
@@ -468,7 +468,7 @@
           </li>
         </ul>
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
           <ul class="location-font">
             <li>
@@ -486,7 +486,7 @@
                 target="_blank" rel="noopener">State Museum of Pennsylvania</a>.
             </li>
           </ul>
-        </span>
+        </div>
 
         <br>
         <button class="read-more-btn">Read More</button>
@@ -519,7 +519,7 @@
           </li>
         </ul>
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
           <ul class="location-font">
             <li>
@@ -536,7 +536,7 @@
                 target="_blank" rel="noopener">Amish Farm & House</a>.
             </li>
           </ul>
-        </span>
+        </div>
 
         <br>
         <button class="read-more-btn">Read More</button>
@@ -545,7 +545,7 @@
       <div class="col-xl-4 into-bttm-pdding">
         <h3 class="left-title"><strong>Things to do in Lancaster</strong></h3>
         <img src="assets/images/amish-country.jpg" class="map-pg-img" alt="Image of amish buggy in Lancaster county">
-        <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+        <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
         <p class="back-map1">Back to map</p>
       </div>
     </div>
@@ -560,7 +560,7 @@
       </div>
       <div class="col-xl-4 into-bttm-pdding">
         <img src="assets/images/philly-skyline.jpg" class="map-pg-img" alt="Image of Philadelphia skyline">
-        <a href="#map-jump"><i class="fas fa-map-marked-alt map-icon1"></i></a>
+        <a href="#map-jump" aria-label="Back to top"><i class="fas fa-map-marked-alt map-icon1"></i></a>
         <p class="back-map1">Back to map</p>
       </div>
       <div class="col-xl-8">
@@ -582,7 +582,7 @@
           </li>
         </ul>
         <br>
-        <span class="more-text">
+        <div class="more-text">
           <p><strong>More things to do:</strong></p>
           <ul class="location-font">
             <li>
@@ -599,7 +599,7 @@
                 rel="noopener">Spruce Street Harbor Park</a>.
             </li>
           </ul>
-        </span>
+        </div>
 
         <br>
         <button class="read-more-btn">Read More</button>
@@ -761,7 +761,7 @@
 
   <!--Google reCAPTCHA-->
 
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script defer src="https://www.google.com/recaptcha/api.js"></script>
 
   <!--Google Maps-->
 
