--- a/search.html
+++ b/search.html
@@ -130,7 +130,7 @@
     <!--Pop-out Button-->
 
     <div class="col-12 mobile-news-btn newsletter-button">
-      <a class="news-btn-styles" id="newsletterButton">
+      <a class="news-btn-styles" id="newsletterButton" aria-label="Open newsletter form">
         Get our Newsletter!
       </a>
     </div>
